--- a/LiveDraw/App.config
+++ b/LiveDraw/App.config
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AntFu7.LiveDraw.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+    <userSettings>
+        <AntFu7.LiveDraw.Properties.Settings>
+            <setting name="BrushSize" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="isVertical" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </AntFu7.LiveDraw.Properties.Settings>
+    </userSettings>
 </configuration>
