--- a/LiveDraw/LiveDraw.csproj
+++ b/LiveDraw/LiveDraw.csproj
@@ -7,7 +7,8 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWindowsForms>true</UseWindowsForms>
     <UseWPF>true</UseWPF>
-    <Configurations>Debug;Release</Configurations>
+    <Configurations>Debug;Release;LiveDraw</Configurations>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Rescoures\Icon.ico</ApplicationIcon>
@@ -21,6 +22,13 @@
   </PropertyGroup>
   <ItemGroup>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="5.7.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="ilmerge" Version="3.0.41" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Rescoures\Icon.ico" />
